chapter 2 big update
still need to improve the function page

--- a/content/01/07_debugging.ipynb
+++ b/content/01/07_debugging.ipynb
@@ -188,7 +188,8 @@
     "**Suppose you have a large dataset you want to explore. What can you do to look at it?**\n",
     "\n",
     "Here are some options: \n",
-    "1. Print parts of it in Jupyter, along with many summary stats. \n",
+    "1. Print parts of it in Jupyter, and look at the actual data.\n",
+    "1. Print many summary stats, and plots. \n",
     "1. Look at the dataset using [variableInspector](05_jupyterlab#my-jupyter-lab-set-up).\n",
     "    - Warning: If your dataset is large enough, using variableInspector can significantly slow down your computer and force you to do a hard reset. \n",
     "    - Workaround: Copy a smaller slice of the data to a new, smaller variable, and then look at that slice using variableInspector. \n",
