--- a/content/02/10_Golden_1.ipynb
+++ b/content/02/10_Golden_1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Golden Rules (for Projects and Programs)\n",
     "\n",
-    "The goal of this chapter is to give you a set of rules, guidance, and some hard-earned wisdom to help you write better programs and develop better projects. \n",
+    "The goal of this chapter is to give you a set of rules, guidance, and some hard-earned wisdom to help you write better programs and develop better projects. You'll code faster, the coding will be easier and result in code that is easier to understand, maintain, scale, debug, and repurpose. \n",
     "\n",
     "I've spent more hours of my life fixing bad programs and issues caused by project management mistakes than I have spent watching the Detroit Lions be awful. So, please, let me help you avoid that tragedy! Don't let the Lions _**OR**_ bad project/program habits ruin your Thanksgiving!\n",
     "\n",
@@ -20,7 +20,14 @@
     "\n",
     ">  **Here is a good rule of thumb: If you are trying to solve a problem, and there are multi-billion dollar firms whose entire business model depends on solving the same problem, and there are whole courses at your university devoted to how to solve that problem, you might want to figure out what the experts do and see if you can't learn something from it.**\n",
     "\n",
-    "Let's start by looking at a project that doesn't abide by these hard earned wisdoms...\n"
+    "Most of the time, your code will be read by other people (e.g. future you). You'll need to run it again, or change it. Skipping the tips in this chapter will make that much harder to do and cost you lots of time. If you don't value your time in the future (high discount rates), you might want to ignore this chapter. BUT! Here's the thing: These tips make writing your code faster the first time you write it!\n",
+    "\n",
+    "Let's start by looking at a project that doesn't abide by these hard earned wisdoms...\n",
+    "\n",
+    "\n",
+    "## Credits\n",
+    "\n",
+    "- This chapter leans heavily on the wonderful [Code and Data for the Social Sciences: A Practitioner's Guide](https://web.stanford.edu/~gentzkow/research/CodeAndData.xhtml#magicparlabel-39) by  Matthew Gentzkow and Jesse M. Shapiro.\n"
    ]
   }
  ],
