--- a/content/02/10_Golden_5a.ipynb
+++ b/content/02/10_Golden_5a.ipynb
@@ -21,10 +21,9 @@
     "So if you're repeating the same block of code multiple times, turn it into a short function. \n",
     "\n",
     "A few more points:\n",
-    "- Don't abstract for the sake of it! Writing functions can be a time-consuming waste of time that eats up time. (Lots of redundancy in that sentence was a waste of time to the reader, but at least it was short. Similarly, bad code is less problematic when it is short.)\n",
-    "- **Rule 5.E:** A magic number is a literal number embedded in your code. \"Magic number\" is a pejorative. Having numbers that act as in-line inputs and parameters can lead to errors and make modifying code very tough. For example, in [a simple program](python-files/02a-a-simple-program.html), I wrote `2006` and `['AAPL','MSFT','VZ']` several times throughout the code. This is bad practice!\n",
-    "- **Rule 5.D:** If you are going to reuse your code, write a \"unit test\", which is a script that tests out the behavior of the function you've written to make sure it works as intended. It should run your function with a few different inputs, possibly inputs with deliberate errors, test the function's output against _**answer you know in advance are correct**_. \n",
-    "    - **Using \"toy\" or \"small\" datasets is essential to developing functions and code more broadly.**\n",
+    "- Don't write functions for the sake of it! Writing functions can be a time-consuming waste of time that eats up time. (Lots of redundancy in that sentence was a waste of time to the reader, but at least it was short. Similarly, bad code is less problematic when it is short.)\n",
+    "- **Rule 5.D:** If you are going to reuse your code, write a \"unit test\", which is a script that tests out the behavior of the function you've written to make sure it works as intended. It should run your function with a few different inputs, possibly inputs with deliberate errors, test the function's output against _**answers you know in advance are correct**_. \n",
+    "    - **Using \"toy\" or \"small\" datasets is essential to developing functions and code more broadly.** Create a small fake dataset because you can compute the answers by hand. You can also sample a small part of a large dataset.\n",
     "    - Corollary: Don't unit test for the sake of it. You don't need to check what `round_a_number()` does when you use a string as input. \n"
    ]
   }
