--- a/_sources/content/02/10_Golden_5a.ipynb
+++ b/_sources/content/02/10_Golden_5a.ipynb
@@ -20,6 +20,8 @@
     "\n",
     "So if you're repeating the same block of code multiple times, turn it into a short function. \n",
     "\n",
+    "Our [textbook has a section on functions](../01/06_python.html#writing-your-own-functions) and we will cover many examples in class. Our resources page has a section on python, which will point you to some [good explainers](https://github.com/jakevdp/WhirlwindTourOfPython/blob/master/08-Defining-Functions.ipynb) on writing them.\n",
+    "\n",
     "A few more points:\n",
     "- Don't write functions for the sake of it! Writing functions can be a time-consuming waste of time that eats up time. (Lots of redundancy in that sentence was a waste of time to the reader, but at least it was short. Similarly, bad code is less problematic when it is short.)\n",
     "- **Rule 5.D:** If you are going to reuse your code, write a \"unit test\", which is a script that tests out the behavior of the function you've written to make sure it works as intended. It should run your function with a few different inputs, possibly inputs with deliberate errors, test the function's output against _**answers you know in advance are correct**_. \n",
