--- a/_sources/content/02/10_Golden_8.ipynb
+++ b/_sources/content/02/10_Golden_8.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Writing good code\n",
     "\n",
-    "This is a short list of tips. [Don't neglect these tips](../about/tips.html) and [these tips](../about/help.html)\n",
+    "This is a short list of tips. [Also look at these tips](../about/tips.html) and [these tips for when you're stuck](../about/help.html).\n",
     "\n",
     "## Naming variables and functions\n",
     "\n",
