more markdown examples

--- a/content/01/04_Markdown.ipynb
+++ b/content/01/04_Markdown.ipynb
@@ -14,15 +14,79 @@
     "\n",
     "Markdown is a just way to give text in a readme or notebook formatting. \n",
     "\n",
-    "````{tabbed} What I type\n",
-    "```text\n",
-    "For example, **to make this phrase bold**, I add two asterisks before and after it.\n",
-    "```\n",
-    "````\n",
+    "`````{tabbed} What I type\n",
+    "````text\n",
     "\n",
-    "````{tabbed} What you see\n",
+    "# A short markdown intro\n",
+    "\n",
+    "The \"#\" at the start of the line above makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
+    "\n",
+    "## Bold and italics\n",
+    "\n",
     "For example, **to make this phrase bold**, I add two asterisks before and after it.\n",
+    "\n",
+    "_Putting an underscore at the start and end of a phrase makes italics._ Easy!\n",
+    "\n",
+    "## Lists, hyperlinks, pictures, and showing code\n",
+    "\n",
+    "You can make lists with hyphens:\n",
+    "- If you want text to look like code, put it inside two backticks: `print(\"hello world\")`\n",
+    "- Or, if the code is multiple lines (a \"code block\"), put it inside three backticks:\n",
+    "\n",
+    "```python\n",
+    "# the \"python\" i put on the line above tells markdown that this code black\n",
+    "# should use python syntax highlighting\n",
+    "print(\"hello world\")\n",
+    "print(\"why hello to you!\")\n",
+    "```\n",
+    "\n",
+    "You can make numbered lists easily:\n",
+    "1. Put brackets and parentheses back-to-back\n",
+    "2. Put the text you want in the brackets\n",
+    "3. And the link in the parentheses\n",
+    "4. [Like this](https://www.espn.com/college-football/game/_/gameId/401282781)\n",
+    "\n",
+    "And you can include pictures:\n",
+    "\n",
+    "![](img/why_i_am_not_sleeping.jpg)\n",
     "````\n",
+    "`````\n",
+    "\n",
+    "`````{tabbed} What I type\n",
+    "\n",
+    "# A short markdown intro\n",
+    "\n",
+    "The \"#\" at the start of the line above makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
+    "\n",
+    "## Bold and italics\n",
+    "\n",
+    "For example, **to make this phrase bold**, I add two asterisks before and after it.\n",
+    "\n",
+    "_Putting an underscore at the start and end of a phrase makes italics._ Easy!\n",
+    "\n",
+    "## Lists, hyperlinks, pictures, and showing code\n",
+    "\n",
+    "You can make lists with hyphens:\n",
+    "- If you want text to look like code, put it inside two backticks: `print(\"hello world\")`\n",
+    "- Or, if the code is multiple lines (a \"code block\"), put it inside three backticks:\n",
+    "\n",
+    "```python\n",
+    "# the \"python\" i put on the line above tells markdown that this code black\n",
+    "# should use python syntax highlighting\n",
+    "print(\"hello world\")\n",
+    "print(\"why hello to you!\")\n",
+    "```\n",
+    "\n",
+    "You can make numbered lists easily:\n",
+    "1. Put brackets and parentheses back-to-back\n",
+    "2. Put the text you want in the brackets\n",
+    "3. And the link in the parentheses\n",
+    "4. [Like this](https://www.espn.com/college-football/game/_/gameId/401282781)\n",
+    "\n",
+    "And you can include pictures:\n",
+    "\n",
+    "![](img/why_i_am_not_sleeping.jpg)\n",
+    "`````\n",
     "\n",
     "## Markdown in readmes\n",
     "\n",
