--- a/content/01/04_Markdown.ipynb
+++ b/content/01/04_Markdown.ipynb
@@ -14,12 +14,34 @@
     "\n",
     "Markdown is a just way to give text in a readme or notebook formatting. \n",
     "\n",
+    "## Markdown in readmes\n",
+    "\n",
+    "GitHub automatically shows the readme on every repo with formatted markdown: \n",
+    "- Scroll down and look at the readme for [this repo](https://github.com/LeDataSciFi/ledatascifi-2022). You can that there is bolded and italics text, code, hyperlinks and headers for sectioning. There is a lot more you can do with Markdown, but that will give you a taste. \n",
+    "- [This is the raw version of how that readme/how that file looks _before_ Github formats it nicely.](https://raw.githubusercontent.com/LeDataSciFi/ledatascifi-2022/main/README.md) \n",
+    "- Compare the raw version to the formatted version. See how I added the hyperlink in the second sentence?\n",
+    "\n",
+    "## Markdown in notebooks\n",
+    "\n",
+    "When we work in Jupyter, we will write python code in files called python notebooks (`ipynb` files, for \"IPYthon NoteBooks\"). In these `ipynb` files, we can have python code interspersed with sections of markdown text. As a result, we can write code and analysis that is easy to follow and execute. In other words, `ipynb` files are useful to create code that is [reproducible, reusable, and shareable[(../about/objectives).\n",
+    "\n",
+    "## Resources\n",
+    "\n",
+    "I'll recommend four resources to practice and learn markdown. Look at them all quickly, and you'll have the gist in under 15 minutes:\n",
+    "\n",
+    "1. [A very good markdown tutorial](https://commonmark.org/help/tutorial/) \n",
+    "2. [A good cheat sheet](https://www.markdownguide.org/cheat-sheet)\n",
+    "3. [Github's markdown explainer](https://guides.github.com/features/mastering-markdown/)\n",
+    "4. Google \"How do I \\<do something \\> in markdown?\n",
+    "\n",
+    "## Examples\n",
+    "\n",
     "`````{tabbed} What I type\n",
     "````text\n",
     "\n",
-    "# A short markdown intro\n",
+    "## How to make sections, subsections, etc\n",
     "\n",
-    "The \"#\" at the start of the line above makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
+    "One \"#\" at the start of a line makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
     "\n",
     "## Bold and italics\n",
     "\n",
@@ -52,11 +74,11 @@
     "````\n",
     "`````\n",
     "\n",
-    "`````{tabbed} What I type\n",
+    "`````{tabbed} What you see\n",
     "\n",
-    "# A short markdown intro\n",
+    "## How to make sections, subsections, etc\n",
     "\n",
-    "The \"#\" at the start of the line above makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
+    "One \"#\" at the start of a line makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
     "\n",
     "## Bold and italics\n",
     "\n",
@@ -86,27 +108,7 @@
     "And you can include pictures:\n",
     "\n",
     "![](img/why_i_am_not_sleeping.jpg)\n",
-    "`````\n",
-    "\n",
-    "## Markdown in readmes\n",
-    "\n",
-    "GitHub automatically shows the readme on every repo with formatted markdown: \n",
-    "- Scroll down and look at the readme for [this repo](https://github.com/LeDataSciFi/ledatascifi-2022). You can that there is bolded and italics text, code, hyperlinks and headers for sectioning. There is a lot more you can do with Markdown, but that will give you a taste. \n",
-    "- [This is the raw version of how that readme/how that file looks _before_ Github formats it nicely.](https://raw.githubusercontent.com/LeDataSciFi/ledatascifi-2022/main/README.md) \n",
-    "- Compare the raw version to the formatted version. See how I added the hyperlink in the second sentence?\n",
-    "\n",
-    "## Markdown in notebooks\n",
-    "\n",
-    "When we work in Jupyter, we will write python code in files called python notebooks (`ipynb` files, for \"IPYthon NoteBooks\"). In these `ipynb` files, we can have python code interspersed with sections of markdown text. As a result, we can write code and analysis that is easy to follow and execute. In other words, `ipynb` files are useful to create code that is [reproducible, reusable, and shareable[(../about/objectives).\n",
-    "\n",
-    "## Resources\n",
-    "\n",
-    "I'll recommend four resources to practice and learn markdown. Look at them all quickly, and you'll have the gist in under 15 minutes:\n",
-    "\n",
-    "1. [A very good markdown tutorial](https://commonmark.org/help/tutorial/) \n",
-    "2. [A good cheat sheet](https://www.markdownguide.org/cheat-sheet)\n",
-    "3. [Github's markdown explainer](https://guides.github.com/features/mastering-markdown/)\n",
-    "4. Google \"How do I \\<do something \\> in markdown?\n"
+    "`````\n"
    ]
   }
  ],
