--- a/content/01/05_jupyterlab.ipynb
+++ b/content/01/05_jupyterlab.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "**Jupyter Notebooks** (`.ipynb` files) \n",
     "* is _one_ type of file that can have Python code within it\n",
-    "* allows users to mix code and formatted text and mathematical expressions (and thus produces elegant and easy-to-digest reports)\n",
+    "* allows users to mix code and formatted text (markdown) and mathematical expressions (and thus produces elegant and easy-to-digest reports)\n",
     "* results in files that **are easy to share** and rerun (and thus easy to collaborate with)\n",
     "* is great for new coders\n",
     "\n",
@@ -32,7 +32,7 @@
     "\n",
     "**Jupyter Lab**\n",
     "- is how we will create and modify our Jupyter notebooks\n",
-    "* is browser based\n",
+    "- is browser based\n",
     "- powerfully flexible and extendable (it has \"powerups\" we can activate)"
    ]
   },
@@ -52,7 +52,6 @@
     "The left sidebar has several menus (you can expand and collapse each by clicking on them)\n",
     "- **The file browser:** Navigating to my project folder\n",
     "- Kernels: A list of running code\n",
-    "- Commands: Has a lot of actions, and short cuts are listed\n",
     "- Extensions: VERY useful to make JLab more powerful \n",
     "\n",
     "In the main work area \n",
@@ -124,7 +123,15 @@
    "source": [
     "## Shortcuts\n",
     "\n",
-    "### Command Mode shortcuts\n",
+    "```{note}\n",
+    "Below,  <kbd>cmd </kbd> and  <kbd>CTRL </kbd> are interchangeable. Use  <kbd>cmd </kbd> on Mac and  <kbd>CTRL</kbd> on Windows.\n",
+    "```\n",
+    "\n",
+    "```{tip}\n",
+    "Pressing  <kbd>cmd </kbd>  + <kbd> shift </kbd>  + <kbd> C </kbd> brings up a search bar so you can search for commands you can run, and it will list shortcuts if available.\n",
+    "```\n",
+    "\n",
+    "### Shortcuts when you are in Command Mode \n",
     "- <kbd> shift </kbd>  + <kbd> enter </kbd>  run cell, move to/select cell below\n",
     "- <kbd> ctrl </kbd>+ <kbd> enter</kbd> run cell\n",
     "- <kbd> A</kbd> insert cell above\n",
@@ -138,8 +145,8 @@
     "- <kbd> Y</kbd> change cell to code mode\n",
     "- <kbd> M</kbd> change cell to markdown mode (good for documentation)\n",
     "\n",
-    "### Edit mode shortcuts\n",
-    "- <kbd>cmd</kbd> + <kbd>/ toggle </kbd>comment lines \n",
+    "### Shortcuts when you are in Edit Mode\n",
+    "- <kbd>cmd</kbd> + <kbd>/</kbd> to comment and uncomment lines \n",
     "- <kbd>tab </kbd>code completion or indent &#11088; &#11088; \n",
     "- <kbd>shift</kbd> + <kbd>tab</kbd> tooltip (syntax help) &#11088; &#11088;\n",
     "- <kbd>ctrl</kbd> + <kbd>shift </kbd>+ <kbd>-</kbd> split cell\n",
@@ -231,9 +238,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How do I copy chunks of lecture files into my own code?\n",
+    "## How do I copy code from one file to another?\n",
     "\n",
-    "I think this is the easiest way:\n",
+    "```{note}\n",
+    "A common thing you'll want to do is copy chunks of lecture files into your own code (to work on problems, borrow code, etc.) so you don't have to retype big blocks of code.\n",
+    "```\n",
+    "\n",
+    "I think this is the easiest way to copy parts of lecture files into your notes:\n",
     "1. Clone the lecture repo to your computer.\n",
     "2. Open the code you're working on in Jupyter Lab.\n",
     "3. Open the lecture code you're working on in Jupyter Lab in a new tab in Jupyter Lab.\n",
