--- a/content/01/04_Markdown.ipynb
+++ b/content/01/04_Markdown.ipynb
@@ -39,17 +39,17 @@
     "`````{tabbed} What I type\n",
     "````text\n",
     "\n",
-    "## How to make sections, subsections, etc\n",
+    "### How to make sections, subsections, etc\n",
     "\n",
     "One \"#\" at the start of a line makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
     "\n",
-    "## Bold and italics\n",
+    "### Bold and italics\n",
     "\n",
     "For example, **to make this phrase bold**, I add two asterisks before and after it.\n",
     "\n",
     "_Putting an underscore at the start and end of a phrase makes italics._ Easy!\n",
     "\n",
-    "## Lists, hyperlinks, pictures, and showing code\n",
+    "### Lists, hyperlinks, and showing code\n",
     "\n",
     "You can make lists with hyphens:\n",
     "- If you want text to look like code, put it inside two backticks: `print(\"hello world\")`\n",
@@ -68,7 +68,11 @@
     "3. And the link in the parentheses\n",
     "4. [Like this](https://www.espn.com/college-football/game/_/gameId/401282781)\n",
     "\n",
-    "And you can include pictures:\n",
+    "### Including pictures\n",
+    "\n",
+    "The syntax is `![]()` and you put the path to the picture inside the parentheses.\n",
+    "\n",
+    "Here is an example:\n",
     "\n",
     "![](img/why_i_am_not_sleeping.jpg)\n",
     "````\n",
@@ -76,17 +80,17 @@
     "\n",
     "`````{tabbed} What you see\n",
     "\n",
-    "## How to make sections, subsections, etc\n",
+    "### How to make sections, subsections, etc\n",
     "\n",
     "One \"#\" at the start of a line makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
     "\n",
-    "## Bold and italics\n",
+    "### Bold and italics\n",
     "\n",
     "For example, **to make this phrase bold**, I add two asterisks before and after it.\n",
     "\n",
     "_Putting an underscore at the start and end of a phrase makes italics._ Easy!\n",
     "\n",
-    "## Lists, hyperlinks, pictures, and showing code\n",
+    "### Lists, hyperlinks, and showing code\n",
     "\n",
     "You can make lists with hyphens:\n",
     "- If you want text to look like code, put it inside two backticks: `print(\"hello world\")`\n",
@@ -105,7 +109,11 @@
     "3. And the link in the parentheses\n",
     "4. [Like this](https://www.espn.com/college-football/game/_/gameId/401282781)\n",
     "\n",
-    "And you can include pictures:\n",
+    "### Including pictures\n",
+    "\n",
+    "The syntax is `![]()` and you put the path to the picture inside the parentheses.\n",
+    "\n",
+    "Here is an example:\n",
     "\n",
     "![](img/why_i_am_not_sleeping.jpg)\n",
     "`````\n"
