--- a/content/01/09_gitignore.ipynb
+++ b/content/01/09_gitignore.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "There are a few ways to delete the extra files in the remote repo. The simplest: Go to the repo on Github.com and delete them individually. \n",
     "\n",
-    "If you are comfortable running some git commands, you can do it programmatically:\n",
+    "If you are comfortable running some git commands, you can do it programmatically. Open terminal/powershell, move the current directory to the root folder of your repo, and then run these commands in order:\n",
     "\n",
     "```\n",
     "gt rm -r --cached . \n",
@@ -48,9 +48,6 @@
     "git commit -m 'Removed all files that are in the .gitignore' \n",
     "git push origin master\n",
     "```\n",
-    "\n",
-    "I suggest making a backup copy of the folder on your computer before doing that until you confirm it worked as you intended.\n",
-    "\n",
     "\n",
     "## More resources\n",
     "\n",
@@ -74,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
