--- a/content/01/out_of_order1.ipynb
+++ b/content/01/out_of_order1.ipynb
@@ -5,7 +5,7 @@
    "id": "f0113509-1fe8-4bfb-90d6-f88c5f2ef43a",
    "metadata": {},
    "source": [
-    "You should open this file in Jupyter Lab on your computer, not on the website!\n",
+    "You should open this file in Jupyter Lab on your computer, not on the website! (The website won't show the code execution order.)\n",
     "\n",
     "If you do, you will see that the first block of code below has \"\\[3\\]\" next to it. \n",
     "\n",
