--- a/content/02/10_Golden_6.ipynb
+++ b/content/02/10_Golden_6.ipynb
@@ -38,7 +38,7 @@
     "# creates DataSample.csv from inputs/\n",
     "\n",
     "def clean_slate():\n",
-    "    # caution: as written, this deletes all files. \n",
+    "    # caution: as written, this deletes all files in temp and output. \n",
     "    import glob, os\n",
     "\n",
     "    files = glob.glob('temp/*')\n",
@@ -55,7 +55,7 @@
     "execfile(export_data.py) \n",
     "```\n",
     "\n",
-    "It very quickly and plainly documents how to run the entire code in the \"build\" project (**Rule 1.A and 1.B**), and makes it easy to do so every time (**Rule 2.B**) before you push it back to the master repo on GitHub (**Rule 2.A**). `run_directory.py` is so simple, it is self-documenting (**Rule 6.C**).\n",
+    "It very quickly and plainly documents how to run the entire code in the \"build\" project (**Rule 1.A and 1.B**), and makes it easy to do so every time (**Rule 2.C**) before you push it back to the master repo on GitHub (**Rule 2.A**). `run_directory.py` is so simple, it is self-documenting (**Rule 6.C**).\n",
     "\n"
    ]
   }
