--- a/content/02/10_Golden_3.ipynb
+++ b/content/02/10_Golden_3.ipynb
@@ -17,9 +17,10 @@
     "| 0. **PLAN BEFORE YOU CODE** | A. \"Pseudo code\" is writing out the broad steps in plain language. I often (almost always for complicated tasks) do this on paper, then translate it to code as an outline (in the code's comments). <br> <br> Maybe planning sounds boring and like a waste of time. I get it; I also want to [shoot first](https://youtu.be/la7uuFsCIrg?t=43) like [Han did...](https://youtu.be/YtoqDF8EnsA)  but coders like Han often [end up looking like this guy](https://youtu.be/mLyOj_QD4a4?t=67)... |\n",
     "| | B. Break the problem into chunks/smaller problems. Large chunks should be in different script files. Within an individual file that is doing one thing, try to break it down. See rule 3.A and 5.B below too. |\n",
     "| 1. Automation | A. Automate everything that can be automated, don't do point-and-click analysis! |\n",
-    "| | B. Write a single script that executes all code from beginning to end. |\n",
+    "| | B. Write a single script that executes all code for the project from beginning to end. This script just calls the project's code files in the right order. |\n",
     "| 2. Version control | A. Store code and data under version control.  |\n",
-    "| | B. **Before checking the directory back in, clear all outputs and temp files and then run the whole directory!** (Check: Did it work right?)   |\n",
+    "| | B. [Use the Github workflow!](../01/03a_githubworkflow) | \n",
+    "| | C. **Before checking the directory back in, clear all outputs, delete temp files, and then run the whole directory to make sure the outputs reproduce!** (Check: Did it work right?) <br> <br> [If the project uses notebook files, always look to see if the first executed code block has \"[1]\" next to it and that all the subsequent code blocks are numbered consecutively.](../01/06_python.html?highlight=golden#clear-output-and-rerun-from-the-start)   |\n",
     "| 3.  [Organizing folders](10_Golden_6) | A. Separate  folders/directories and files by function |\n",
     "| | B. Put input files into an input folder and outputs into a different folder  |\n",
     "| | A + B = your folders and files will be largely self documenting |\n",
@@ -38,8 +39,7 @@
     "| | B. Write DRY code: Don't Repeat Yourself! See rule 5.A. |\n",
     "| | C. Premature optimization (for speed) is the root of all evil. | \n",
     "| | D. Use self-documenting variable and function names. | \n",
-    "| 8. Look at your data/objects | As discussed [here](../01/07_debugging.html#seriously-print-your-data-and-objects-often) |\n",
-    "| | ABCD = Always Be Checking your Data! | \n"
+    "| 8. Look at your data/objects | As discussed [here](../01/07_debugging.html#seriously-print-your-data-and-objects-often) and many other places. <br> <br> **ABCD = Always Be Checking your Data!** | \n"
    ]
   }
  ],
