--- a/content/02/10_Golden_1.ipynb
+++ b/content/02/10_Golden_1.ipynb
@@ -24,10 +24,12 @@
     "\n",
     "Let's start by looking at a project that doesn't abide by these hard earned wisdoms...\n",
     "\n",
+    "---\n",
     "\n",
-    "## Credits\n",
+    "**Credits**\n",
     "\n",
-    "- This chapter leans heavily on the wonderful [Code and Data for the Social Sciences: A Practitioner's Guide](https://web.stanford.edu/~gentzkow/research/CodeAndData.xhtml#magicparlabel-39) by  Matthew Gentzkow and Jesse M. Shapiro.\n"
+    "- This chapter leans heavily on the wonderful [Code and Data for the Social Sciences: A Practitioner's Guide](https://web.stanford.edu/~gentzkow/research/CodeAndData.xhtml#magicparlabel-39) by  Matthew Gentzkow and Jesse M. Shapiro.\n",
+    "- And from [Arthur Turrell](https://aeturrell.github.io)\n"
    ]
   }
  ],
