--- a/_sources/content/01/04_Markdown.ipynb
+++ b/_sources/content/01/04_Markdown.ipynb
@@ -78,7 +78,7 @@
     "````\n",
     "`````\n",
     "\n",
-    "`````{tabbed} What you see\n",
+    "````{tabbed} What you see\n",
     "\n",
     "### How to make sections, subsections, etc\n",
     "\n",
@@ -116,7 +116,7 @@
     "Here is an example:\n",
     "\n",
     "![](img/why_i_am_not_sleeping.jpg)\n",
-    "`````\n"
+    "````\n"
    ]
   }
  ],
