--- a/content/01/04_Markdown.ipynb
+++ b/content/01/04_Markdown.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "````{tabbed} What you see\n",
     "\n",
-    "### How to make sections, subsections, etc\n",
+    "<h3> How to make sections, subsections, etc </h3>\n",
     "\n",
     "One \"#\" at the start of a line makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
     "\n",
