--- a/_sources/content/01/04_Markdown.ipynb
+++ b/_sources/content/01/04_Markdown.ipynb
@@ -84,13 +84,13 @@
     "\n",
     "One \"#\" at the start of a line makes a \"title header\". Two \"##\" means a section header, three a subsection, and so on.\n",
     "\n",
-    "### Bold and italics\n",
+    "<h3> Bold and italics  </h3>\n",
     "\n",
     "For example, **to make this phrase bold**, I add two asterisks before and after it.\n",
     "\n",
     "_Putting an underscore at the start and end of a phrase makes italics._ Easy!\n",
     "\n",
-    "### Lists, hyperlinks, and showing code\n",
+    "<h3> Lists, hyperlinks, and showing code  </h3>\n",
     "\n",
     "You can make lists with hyphens:\n",
     "- If you want text to look like code, put it inside two backticks: `print(\"hello world\")`\n",
@@ -109,7 +109,7 @@
     "3. And the link in the parentheses\n",
     "4. [Like this](https://www.espn.com/college-football/game/_/gameId/401282781)\n",
     "\n",
-    "### Including pictures\n",
+    "<h3> Including pictures  </h3>\n",
     "\n",
     "The syntax is `![]()` and you put the path to the picture inside the parentheses.\n",
     "\n",
