--- a/content/01/05_jupyterlab.ipynb
+++ b/content/01/05_jupyterlab.ipynb
@@ -216,22 +216,14 @@
    "source": [
     "## My Jupyter Lab Set up\n",
     "\n",
-    "Dark Mode (Settings -> JupyterLab Theme -> JupyterLab Dark)\n",
+    "The extensions I have installed  (which you can see by clicking the \"puzzle\" icon on the left sidebar menu in JupyterLab) are below. [I explain how to install these extensions here.](02_Setup)\n",
     "\n",
-    "Currently installed extensions (which you can see by clicking the \"puzzle\" icon on the left sidebar menu):\n",
+    "1. jupyterlab_spellchecker \n",
+    "2. variableInspector: helps you see inside of data objects (amazing, but be careful with large datasets)\n",
+    "3. jupyterlab-lsp: [code suggestions, some error detection, and help while writing code](https://github.com/jupyter-lsp/jupyterlab-lsp)\n",
+    "4. jupyterlab_code_formatter: with one click, will automatically format your code nicely!\n",
     "\n",
-    "- @ijmbarr/jupyterlab_spellchecker (can directly install from the \"extensions menu\")\n",
-    "    - Or via a powershell terminal: `conda install -c conda-forge jupyterlab-spellchecker`\n",
-    "    - Mac users: Your TA had to install node.js in order to install the spell checker extension. MacOS users who also installed homebrew can install this in terminal via `brew install node` . \n",
-    "- @jupyter-widgets/jupyterlab-manager    \n",
-    "\n",
-    "Extensions I like, but are not currently installed for one reason or another\n",
-    "- variableInspector: helps you see inside of data objects which is amazing, but has special install instructions\n",
-    "- jupyterlab-system-monitor: helps you see how much of your CPU and memory are in use\n",
-    "- nbdime-jupyterlab  (can directly install from the \"extensions menu\")\n",
-    "\n",
-    "\n",
-    "\n"
+    "You'll see what these do as we go. \n"
    ]
   },
   {
