--- a/content/01/07a_errors.ipynb
+++ b/content/01/07a_errors.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "## Handling errors\n",
     "\n",
-    "```{admonition} \n",
+    "```{admonition}\n",
     "Q: When should you write code with `try-except` blocks?\n",
     "\n",
     "A: When you are writing code where you expect some exceptions to occur, and you want the code to continue on. \n",
@@ -203,8 +203,7 @@
     "The most common example in this class: You wrote code that scrapes a website. Sometimes, a page won't load. You want the crawler to continue.\n",
     "```\n",
     "\n",
-    "\n",
-    "Syntax with pseudocode for `try-except` blocks, borrowed from an [answer on SO](https://stackoverflow.com/a/31626974):\n",
+    "Here is the syntax with pseudocode for `try-except` blocks, borrowed from an [answer on SO](https://stackoverflow.com/a/31626974). You must include at least one `except` block for any `try` block.\n",
     "\n",
     "```py\n",
     "try:\n",
