--- a/_sources/content/01/02_Setup.ipynb
+++ b/_sources/content/01/02_Setup.ipynb
@@ -65,13 +65,17 @@
     "    ```\n",
     "    ````\n",
     "    \n",
-    "6. Optional, but recommended: Install a good text editor. [Atom](https://atom.io/), [Sublime](https://www.sublimetext.com/), or [Visual Studio (this link includes suggestions for extensions)](https://www.youtube.com/watch?v=jY0o1nkW0ow) are the most popular according to prior students of this class. "
+    "6. Optional, but recommended: Install a good text editor. [Atom](https://atom.io/), [Sublime](https://www.sublimetext.com/), or [Visual Studio (this link includes suggestions for extensions)](https://www.youtube.com/watch?v=jY0o1nkW0ow) are the most popular according to prior students of this class. \n",
+    "\n",
+    "7. **Strongly** recommended: [Add some superpowers to JupyterLab to make coding easier](#Step-7-Setting-up-JupyterLab)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Steps 1-6 on video\n",
+    "\n",
     "I put together a video of me installing everything due to popular demand:"
    ]
   },
@@ -87,6 +91,56 @@
    "metadata": {},
    "source": [
     "If you have completed all the steps above, you are ready to go! If you got stuck on a step, message the RA or post on the classmates group. We will get you going quickly!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7: Setting up JupyterLab\n",
+    "\n",
+    "These extensions will give you spell checking, code hints, and automatic formatting for your code 😍. \n",
+    "\n",
+    "1. Run these in terminal (Mac) or Anaconda Powershell Prompt (Windows) one at a time:\n",
+    "\t```text\n",
+    "\tpip install jupyterlab-spellchecker\n",
+    "\tpip install jupyterlab_code_formatter\n",
+    "\tpip install black\n",
+    "\tpip install jupyterlab-lsp\n",
+    "\tpip install python-lsp-server[all]\n",
+    "\tpip install --upgrade lckr-jupyterlab-variableinspector \n",
+    "\t```\n",
+    "\t\n",
+    "    - Mac users: To install the spellchecker, your TA had to install node.js in order to install the spell checker extension. MacOS users who also installed homebrew can install this in terminal via `brew install node`. \n",
+    "    - Windows users: The last `pip install` command often fails. [Use this fix.](https://github.com/lckr/jupyterlab-variableInspector/issues/183#issuecomment-806579896)\n",
+    "    \n",
+    "2. Now run `jupyter lab` in the terminal window to open Jupterlab. \n",
+    "\n",
+    "3. Click on settings, then Advanced Settings Editor. Click on the Keyboard Shortcuts menu. Then look to the right side of the screen: In the user preference box, add the text below. After you copy it in, save the user settings. (Either CTRL+S or using the the icon to the upper right of the user preference box.)\n",
+    "\n",
+    "    ```text\n",
+    "\t{\n",
+    "\t\t\"shortcuts\": [\n",
+    "\t\t\t{\n",
+    "\t\t\t\t\"command\": \"jupyterlab_code_formatter:format\",\n",
+    "\t\t\t\t\"keys\": [\n",
+    "\t\t\t\t\t\"Ctrl Shift F\"\n",
+    "\t\t\t\t],\n",
+    "\t\t\t\t\"selector\": \".jp-Notebook.jp-mod-editMode\"\n",
+    "\t\t\t}\n",
+    "\t\t]\n",
+    "\t}\n",
+    "    ```\n",
+    "    \n",
+    "    - Mac users: You might want to use \"Cmd\" instead of \"Ctrl\" \n",
+    "    \n",
+    "4. Still in the Advanced Settings Editor, Click on the Code Completion menu. Then look to the right side of the screen: In the user preference box, add the text below. After you copy it in, save the user settings. (Either CTRL+S or using the the icon to the upper right of the user preference box.)\n",
+    "    ```text\n",
+    "    {\n",
+    "\t\t\"continuousHinting\": true,\n",
+    "\t}\t\n",
+    "    ```\n",
+    "        "
    ]
   }
  ],
