--- a/_sources/content/01/08_libraries.ipynb
+++ b/_sources/content/01/08_libraries.ipynb
@@ -35,10 +35,11 @@
    "source": [
     "## Installing libraries \n",
     "\n",
-    "The Anaconda distribution we installed also installed most of the key data science Python libraries/packages we will use throughout the semester. In the event you need to install a new package to add functionality to Python, e.g. `matplotlib` (which you already have!), you can \n",
+    "The Anaconda distribution we installed also installed most of the key data science Python libraries/packages we will use throughout the semester. In the event you need to install a new package to add functionality to Python, e.g. `seaborn` (which you already have!), you can \n",
     "\n",
     "1. Open Anaconda Prompt (Windows) or Terminal (Mac) or a code cell in Jupyter Lab \n",
-    "2. `pip install matplotlib` will install the package matplotlib. \n",
+    "1. `conda install seaborn` will install Seaborn\n",
+    "    - If `conda install` doesn't work for a package, you can try to `pip install` it. E.g. `pip install seaborn`  \n",
     "\n",
     "Some packages can't be `pip` installed, but hopefully you won't need to deal with that this semester, so I'm going to skip discussion of such package installs. "
    ]
@@ -60,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
