--- a/_sources/content/02/10_Golden_1.ipynb
+++ b/_sources/content/02/10_Golden_1.ipynb
@@ -29,7 +29,7 @@
     "**Credits**\n",
     "\n",
     "- This chapter leans heavily on the wonderful [Code and Data for the Social Sciences: A Practitioner's Guide](https://web.stanford.edu/~gentzkow/research/CodeAndData.xhtml#magicparlabel-39) by  Matthew Gentzkow and Jesse M. Shapiro.\n",
-    "- And from [Arthur Turrell](https://aeturrell.github.io)\n"
+    "- Augmented with some contributions borrowed from [Arthur Turrell](https://aeturrell.github.io)\n"
    ]
   }
  ],
