--- a/_sources/content/02/10_Golden_5a.ipynb
+++ b/_sources/content/02/10_Golden_5a.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "So if you're repeating the same block of code multiple times, turn it into a short function. \n",
     "\n",
-    "Our [textbook has a section on functions](../01/06_python.html#writing-your-own-functions) and we will cover many examples in class. Our resources page has a section on python, which will point you to some [good explainers](https://github.com/jakevdp/WhirlwindTourOfPython/blob/master/08-Defining-Functions.ipynb) on writing them.\n",
+    "Our [textbook has a section on how to build functions](../01/06_python.html#writing-your-own-functions) and we will cover many examples in class. Additionally, our resources page has a section on python, which will point you to some [good explainers](https://github.com/jakevdp/WhirlwindTourOfPython/blob/master/08-Defining-Functions.ipynb) on writing them.\n",
     "\n",
     "A few more points:\n",
     "- Don't write functions for the sake of it! Writing functions can be a time-consuming waste of time that eats up time. (Lots of redundancy in that sentence was a waste of time to the reader, but at least it was short. Similarly, bad code is less problematic when it is short.)\n",
