--- a/content/01/03_github.ipynb
+++ b/content/01/03_github.ipynb
@@ -112,13 +112,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GitHub for version control with Git \n",
+    "## GitHub for version control  \n",
     "\n",
-    "Why version control? In addition to the awful \"file naming conundrum\" in the comic above,\n",
+    "Why use version control? In addition to the awful \"file naming conundrum\" in the comic above,\n",
     "\n",
     "- Don't fret removing stuff\n",
     "- Leave a breadcrumb trail for troubleshooting\n",
-    "- \"Undo\" and navigate a previous state\n",
+    "- \"Undo\" and navigate a previous state: \"Time machine\" \n",
     "- Helps you define your work\n",
     "\n",
     "The way you work on project with GitHub is by following what I will call \n",
