--- a/content/01/05_jupyterlab.ipynb
+++ b/content/01/05_jupyterlab.ipynb
@@ -216,7 +216,9 @@
    "source": [
     "## My Jupyter Lab Set up\n",
     "\n",
-    "The extensions I have installed  (which you can see by clicking the \"puzzle\" icon on the left sidebar menu in JupyterLab) are below. [I explain how to install these extensions here.](02_Setup)\n",
+    "You can add extra features to Jupyter Lab by installing extensions. (You can see your installed extensions by clicking the \"puzzle\" icon on the left sidebar menu within JupyterLab.)\n",
+    "\n",
+    "The extensions I have installed are below. [Follow these instructions to install them.](02_Setup.html#step-7-setting-up-jupyterlab)\n",
     "\n",
     "1. jupyterlab_spellchecker \n",
     "2. variableInspector: helps you see inside of data objects (amazing, but be careful with large datasets)\n",
