--- a/_sources/content/01/09_gitignore.ipynb
+++ b/_sources/content/01/09_gitignore.ipynb
@@ -36,11 +36,11 @@
     "\n",
     "## I have a file in gitignore, but it's still on the remote repo!\n",
     "\n",
-    "That's because it was already on the remote repo when you added it to the gitignore; The gitignore file simply tells git to \"not sync\" those files any more. It doesn't mean \"delete these files from the remote repo\".\n",
+    "That's because it was already on the remote repo when you added it to the gitignore; **The gitignore file simply tells git to \"not sync\" those files any more. It doesn't mean \"delete these files from the remote repo\".**\n",
     "\n",
     "There are a few ways to delete the extra files in the remote repo. The simplest: Go to the repo on Github.com and delete them individually. \n",
     "\n",
-    "If you are comfortable running some git commands, you can do it programmatically. Open terminal/powershell, move the current directory to the root folder of your repo, and then run these commands in order:\n",
+    "If you have lots of files you want to suddenly gitignore/delete and you are comfortable running some git commands, you can do it programmatically. Open terminal/powershell, **move to the current directory to the root folder of your repo,** and then run these commands in order:\n",
     "\n",
     "```\n",
     "gt rm -r --cached . \n",
