--- a/content/01/06_python.ipynb
+++ b/content/01/06_python.ipynb
@@ -6,9 +6,12 @@
    "source": [
     "# Digging into Py(thon)\n",
     "\n",
-    "Hopefully this goes better than Chrissy Teigen's experience:\n",
+    "```{important}\n",
     "\n",
-    "![](https://media.giphy.com/media/zlXkHKnCXAe9a/giphy.gif)\n",
+    "This page is long, but important. It's structured as a walkthrough - you should run the code on your computer as you read it. \n",
+    "\n",
+    "It is not meant to be the end-all-be-all of python basics. There are [very good resources around the web](../about/resources) you should and will consult during the semester which contain more in-depth info on topics. [https://www.pythoncheatsheet.org/](https://www.pythoncheatsheet.org/) is a good one. What's below is a curated set of topics to get us going in the class. \n",
+    "```\n",
     "\n",
     "## Tutorials\n",
     "\n",
@@ -24,7 +27,12 @@
     "\n",
     "Do you prefer to learn through games?\n",
     "- (That's how I learned python! I built solvers for Sudoku and the Cracker Barrel golf tee game... Both taught me a LOT about programming in python, problem solving strategies, and data structures.) \n",
-    "- [Edabit](https://edabit.com/) has a bunch of games. If you log in, you can search for python challenges that take from 1 minute to ... longer... For example, [the Museum of Dull Things](https://edabit.com/challenge/cx7eFvQBzjauLgwgZ). If you find any games illuminating, please let me know via the class discussions repo!"
+    "- Assignment 1 in 2022 includes an optional challenge: Optimizing your Wordle guessing strategy.\n",
+    "- [Edabit](https://edabit.com/) has a bunch of games. If you log in, you can search for python challenges that take from 1 minute to ... longer... For example, [the Museum of Dull Things](https://edabit.com/challenge/cx7eFvQBzjauLgwgZ). If you find any games illuminating, please let me know via the class discussions repo!\n",
+    "\n",
+    "Alright, let's get going. Hopefully digging into Py goes better than Chrissy Teigen's experience:\n",
+    "\n",
+    "![](https://media.giphy.com/media/zlXkHKnCXAe9a/giphy.gif)\n"
    ]
   },
   {
@@ -33,13 +41,24 @@
    "source": [
     "## Python essentials \n",
     "\n",
-    "Ok, now we are going to live code a bunch together. I want you to get comfortable typing commands yourself rather than copy-pasting. This is slightly more painful in the beginning, but much better payoff in the long-run.\n",
+    "Below, we cover 12[^scope] essential topics you'll need to understand. \n",
+    "\n",
+    "[^scope]: The subsection on scope isn't crucial but is useful to students sometimes.\n",
+    "\n",
+    "```{warning}\n",
+    "Research strongly indicates that active learning is the most effective way to learn new skills. That's why I linked to tutorials above. \n",
+    "\n",
+    "This chapter works as a reference page you can return to, but - especially if you are new to Python! - I want you to try to run as much code from this page in your own notebook file so you can add your own notes about python and write and try additional things with code. \n",
+    "\n",
+    "To the extent possible, I want you to get comfortable typing commands yourself rather than copy-pasting. This is slightly more painful in the beginning, but much better payoff in the long-run.\n",
+    "```\n",
     "\n",
     "```{tip}\n",
-    "Copy all of these code blocks to your own notebook file inside your notes folder and try to run them. Make sure Jupyter Lab calls the cells \"code\" cells instead of markdown cells, and then use <kbd> CTRL </kbd> + <kbd> ENTER </kbd> to run them.\n",
+    "That said, when you're short on time, you can copy code blocks on this website to your own notebook files to try to run them two ways:\n",
+    "1. Quick and dirty: By clicking the \"copy\" symbol in the upper-right corner of code blocks on the website.\n",
+    "2. Better option: [This video](05_jupyterlab.html?#how-do-i-copy-code-from-one-file-to-another) shows you how to download the textbook and lecture slides to your computer, and then you can easily drag and drop both sections of code and markdown from those into your notes. \n",
     "\n",
-    "**HINT:** You can copy _code_ cells on this website by clicking the \"copy\" symbol in the upper-right corner of code blocks. If you want to copy chunks of files that includes sections of Markdown, watch [this video](content:chunkcopy).\n",
-    "\n",
+    "After copy-pasting, the way to \"supercharge\" that into active learning is to run the code, _**and then change something in the code, rerun it, and see what changes**_. \n",
     "```\n",
     "\n",
     "### Comments\n",
@@ -606,10 +625,27 @@
     "- allows you to reuse code\n",
     "- prevents copy/paste errors\n",
     "\n",
-    "To write a function, write `def <nameOfYourChoice>(<you can specify arguments the function takes, or none>):` and then write your indented code block that is the function. \n",
+    "````{admonition} The syntax of functions \n",
+    ":class: tip\n",
+    "\n",
+    "To write a function, write\n",
+    "1. \"def\", \n",
+    "2. name the function,\n",
+    "3. inside parentheses, list the parameters a user might pass as inputs into the function\n",
+    "4. a colon\n",
+    "5. then, all the code of the function is indented and begins on on the next line\n",
+    "6. use `return <object>` at the end of the function to output the object the function makes (which could be any type of object!)\n",
+    "\n",
+    "```python\n",
+    "def <nameOfYourChoice>(<you can specify arguments the function takes, or none>):` \n",
+    "    # and then write your indented code block that is the function. \n",
+    "```    \n",
+    "\n",
+    "````\n",
     "\n",
     "On inputs: \n",
     "- **Any object(s) you want can be given as inputs!** You can give as inputs a variable, a list, a dictionary, even a function. Remember, in python, _everything is an object_. \n",
+    "- You choose the name an object will be referred to as _within_ the function. In the example below, a user passes a number into the function, and the function cals whatever number you give it \"x\" and then checks if `x<0`\n",
     "- Functions can get \"positional\" arguments or keyword arguments. Positional arguments are understood because Python figures them out based on the order in which you provide them.\n",
     "\n",
     "On outputs:\n",
@@ -647,6 +683,8 @@
    "source": [
     "def f(x, a=1, b=1):\n",
     "    '''\n",
+    "    Returns a list. Element 0 is a+bx, element 1 is 2. \n",
+    "    \n",
     "    The first argument you give goes to x, the second to a, the third to b.\n",
     "    If you do not provide a or b, they default to the value 1.\n",
     "    '''\n",
@@ -684,7 +722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scope\n",
+    "### Advanced: Scope\n",
     "\n",
     "I want you to be generally aware of the concept of \"global\" and \"local\" scope. Generally, python objects are available only within the region they are defined and subregions therein. Put differently, objects are available downstream, but not upstream.\n",
     "\n",
